# smactorio

./: .gitattributes  AGENTS.md  README.md  pyproject.toml  smactorio_spec.md
.devcontainer/: Dockerfile  devcontainer.json  postcreatecommand.sh
.github/prompts/: iac.analyze.prompt.md  iac.checklist.prompt.md  iac.clarify.prompt.md  iac.implement.prompt.md  iac.plan.prompt.md  iac.principles.prompt.md  iac.specify.prompt.md  iac.tasks.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md  principles.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.speckit/: .gitkeep  seed.json
factory/: __init__.py  bootstrap.py  memory.py  models.py  signatures.py
factory/state/: .gitkeep
scripts/: build.py
src/: .gitkeep
tests/: __init__.py  test_bootstrap.py  test_memory.py  test_models.py
